assets/index.css
---
layout: empty
---

@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";


@layer components {
    article {
        @apply prose prose-sm sm:prose lg:prose-lg xl:prose-xl mx-auto
    }

    .custom-underline-blue {
        @apply border-b-4 border-blue-400;
    }

    .section-container {
        @apply container px-5 py-24 mx-auto
    }

    .header-text{
        @apply sm:text-3xl text-2xl font-medium
    }

    .footer-link {
        @apply text-gray-600 hover:text-gray-800
    }

    .footer-categorie {
        @apply font-medium text-gray-900 tracking-widest text-sm mb-3
    }

    .cm-hvr-btn {
        @apply text-gray-700 bg-gray-100 hover:bg-gray-200 rounded
    }

    .cm-hvr-btn-primary {
        @apply text-white bg-secondary hover:bg-primary rounded
    }

    .cm-gray-1 {
        @apply text-gray-900
    }

    .cm-gray-2 {
        @apply text-gray-600
    }

    .cm-gray-3 {
        @apply text-gray-500
    }

    a.anchor {
        display: block;
        position: relative;
        top: -72px;
        visibility: hidden;
    }

    .color-link {
        @apply text-secondary
    }

    .badge {
        @apply py-1 px-2.5 rounded-full
    }

    .list-unstyled {
        padding-left: 0px;
        position: initial;
        @apply list-none
    }

    .list-unstyled li {
        padding-left: 0px;
        position: initial;
        @apply list-none
    }

    .max-w-p90 {
        max-width: 90%
    }

    img + em {
        display: block;
        text-align: center;
    }
}

